[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "determination-test"
version = "0.1.0"
description = "Determination Test"
readme = "README.md"
requires-python = ">=3.9, <3.11"

dependencies = [
    "Kivy==2.1.0",
    "kivy-deps.angle==0.3.3; sys_platform == 'win32'",
    "kivy-deps.glew==0.3.1; sys_platform == 'win32'",
    "kivy-deps.sdl2==0.4.5; sys_platform == 'win32'",
    "Kivy-Garden==0.1.5",
    "colorzero==2.0",
    "defusedxml==0.7.1",
    "docutils==0.19",
    "fpdf2==2.7.4",
    "gpiozero==1.6.2",
    "matplotlib==3.7.1",
    "numpy==1.24.2",
    "pandas==2.0.1",
    "pigpio==1.78",
    "Pillow==9.4.0",
    "pygame==2.1.2",
    "pypiwin32==223; sys_platform == 'win32'",
    "pywin32==305; sys_platform == 'win32'",
    "requests==2.28.2",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "statsmodels==0.14.0",
]

[tool.setuptools]
py-modules = ["main"]